Make color picker

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <div class="grid-size" data-errormsg="">
         <label for="textbox">Enter a grid size: (100max)</label>
         <input type="text" class="textbox" id="textbox" autofocus placeholder="Name"tabindex="1">
-        <button id="button1">Submit</button>
+        <button id="button-submit">Submit</button>
+        <button id="button-reset">Reset</button>
     </div>
     <div class="color-play">
         <div class="color option">
-            <label for="favcolor">Select your favorite color:</label>
-            <input type="color" id="favcolor" name="favcolor" value="#ff0000">
+            <label for="fav-color">Select your favorite color:</label>
+            <input type="color" id="fav-color" name="fav-color" value="#ff0000">
         </div>
         <div class="color option">
             <label for="rainbow">Rainbow mod</label>
