--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
 <body>
     <form action="#" id="form-user" class="input-container">
     <div class="grid-size" data-errormsg="">
-        <label for="textbox">Enter a grid size: (99max)</label>
-        <input type="text" class="textbox" id="textbox" autofocus placeholder="Name" tabindex="1">
-        <button id="button-submit">Submit</button>
-        <button id="button-reset">Reset</button>
+        <div class="number-select">
+            <label for="textbox">Enter a grid size: (99max)</label>
+            <input type="text" class="textbox" id="textbox" autofocus placeholder="Number" tabindex="1">
+        </div>
+        <div class="buttons">
+            <button id="button-submit">Submit</button>
+            <button id="button-reset">Reset</button>
+        </div>
     </div>
     <div class="color-play">
         <div class="color option">
-            <label for="fav-color">Select your favorite color:</label>
+            <label for="fav-color">Select color:</label>
             <input type="color" id="fav-color" name="fav-color" value="#ff0000">
         </div>
-        <div class="color option">
+        <div class="rainbow option">
             <label for="rainbow">Rainbow mod</label>
             <input type="checkbox" id="rainbow" class="rainbow">
         </div>
         <div class="strength option">
-            <label for="shadowing">Strength</label>
+            <label for="shadowing">Opacity mod</label>
             <input type="checkbox" id="shadowing" class="shadowing">
         </div>
     </div>
